# leiturece-back-end

./: .dockerignore  .gitignore  README.md  alembic.ini  compose.yaml  dockerfile  env.EXAMPLE  pyproject.toml  requirements.txt  settings.py  shell.nix
app/: main.py  settings.py
app/database/: db.py  models.py
app/dependencies/database/: db.py  models.py
app/dependencies/mail/: body.py  mail.py
app/dependencies/token/: token.py
app/helpers/: auth.py
app/routes/: auth.py
app/schemas/: auth.py
migrations/: env.py
migrations/versions/: 3bc711fd8c74_first_commit.py  3f8290fd2cf5_check.py  4b6694137262_database_refactor.py  66f4925f1787_second_commit.py  6b3b8bf8b25a_third_commit_adding_created_at.py  9f927728ff57_full_reset_database_change_ui_to_uuid.py  dd045d335d6d_firts_revision_after_reset.py
