[tool.poetry]
package-mode = false

[virtualenvs]
in-project = true

[project]
name = "leiturece-back-end"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "fastapi[standard] (>=0.115.7,<0.116.0)",
    "aiosmtplib (>=3.0.2,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "joserfc (>=1.0.3,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
alembic = "^1.14.1"

